dnl Fix me I'm badly written!
dnl Process this file with autoconf to produce a configure script.
AC_INIT(tile.c)
#AC_INIT(tilerc.c)
#AC_INIT(avoid.c)
#AC_INIT(x11.c)
#AC_CONFIG_AUX_DIR(util)

echo -n "checking host operating system... "
HOSTOS=`uname -s 2> /dev/null`
echo "$HOSTOS"

echo -n "checking host arch... "
HOSTARCH=`uname -m 2> /dev/null`
echo "$HOSTARCH"

echo -n "checking system version... "
HOSTREL=`uname -r 2> /dev/null`
echo "$HOSTREL"

dnl Use if it is an error not to find a program.
AC_DEFUN(ENSURE_PATH_PROG, [
    AC_PATH_PROG($1, $2)
    if test -z "${$1}" ; then
        AC_MSG_ERROR($2 was not found in path and is required)
    fi
])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.
AC_PATH_X
AC_PATH_XTRA

test x$no_x = "xyes" && AC_MSG_ERROR([tile requires the X Window System libraries and headers.])

test x$x_includes = "x" && x_includes="/usr/include"
test x$x_libraries = "x" && x_libraries="/usr/lib"

dnl AC_CHECK_LIB(X11, XOpenDisplay,
dnl  LIBS="$LIBS -lX11",
dnl    AC_MSG_ERROR([Could not find XOpenDisplay in -lX11.])
dnl    )
LIBS="$LIBS $X_LIBS $X_EXTRA_LIBS -lX11 -lXt"
CFLAGS="$CFLAGS $X_CFLAGS"

echo -n "checking for tile version: "
VER=`awk '{print $0; exit}' < ChangeLog`
echo "$VER"

AC_SUBST(LIBS)
AC_SUBST(CFLAGS)
AC_SUBST(VER)
AC_SUBST(HOSTOS)
AC_SUBST(HOSTARCH)
AC_SUBST(HOSTREL)

dnl Checks for header files.
dnl AC_HEADER_STDC
dnl AC_HEADER_SYS_WAIT
dnl AC_CHECK_HEADERS(fcntl.h sys/time.h syslog.h unistd.h)
AC_CHECK_HEADERS(X11/X.h)
AC_CHECK_HEADERS(X11/Xlib.h)
AC_CHECK_HEADERS(X11/Xatom.h)
dnl AC_CHECK_HEADERS(X11/Xutil.h)
AC_CHECK_HEADERS(X11/Intrinsic.h)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(stdlib.h)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UID_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(select strerror strstr)

AC_OUTPUT(Makefile)
